--- a/scss/contact/_contact.scss
+++ b/scss/contact/_contact.scss
@@ -76,6 +76,10 @@
     box-shadow: 0px 0px 5px rgb(0, 255, 0);
 }
 
+.success textarea {
+    box-shadow: 0px 0px 5px rgb(0, 255, 0);
+}
+
 .error input[type=text] {
     box-shadow: 0px 0px 5px rgb(255, 0, 0);
 }
