--- a/scss/side_nav/_side_nav.scss
+++ b/scss/side_nav/_side_nav.scss
@@ -76,6 +76,8 @@
                     padding: 20px 0px;
                     font-size: 1.1rem;
                     font-weight: 600;  
+                    border-top: solid 2px white;
+                    border-bottom: solid 2px white;
                     
                 }
     
