--- a/scss/contact/_contact.scss
+++ b/scss/contact/_contact.scss
@@ -32,11 +32,13 @@
             display: block;
             margin-top: 20px;
             border: none;
+            width: 150px;
             padding: 15px 20px;
             background-color: #888;
             color: white;
-            font-size: 1.2rem;
+            font-size: 1.3rem;
         }
+
 
         input[type=submit]:hover {
             background-color: #555;
@@ -48,6 +50,22 @@
             text-align: left;
         }
     }
+}
+
+.success input[type=text]{
+    box-shadow: 0px 0px 5px rgb(0, 255, 0);
+}
+
+.success textarea {
+    box-shadow: 0px 0px 5px rgb(0, 255, 0);
+}
+
+.error input[type=text] {
+    box-shadow: 0px 0px 5px rgb(255, 0, 0);
+}
+
+.error textarea {
+    box-shadow: 0px 0px 5px rgb(255, 0, 0);
 }
 
 @media screen and (min-width: 768px) {
@@ -72,18 +90,3 @@
     }
 }
 
-.success input[type=text]{
-    box-shadow: 0px 0px 5px rgb(0, 255, 0);
-}
-
-.success textarea {
-    box-shadow: 0px 0px 5px rgb(0, 255, 0);
-}
-
-.error input[type=text] {
-    box-shadow: 0px 0px 5px rgb(255, 0, 0);
-}
-
-.error textarea {
-    box-shadow: 0px 0px 5px rgb(255, 0, 0);
-}
