--- a/scss/header/_header.scss
+++ b/scss/header/_header.scss
@@ -13,7 +13,7 @@
         .header-text {
             display: grid;
             background-color: rgba(#fff, 0.8);
-            margin: 200px auto auto;
+            margin: auto;
             width: 100%;
             height: 200px;
             justify-items: center;
@@ -62,6 +62,34 @@
 
         }
        
+    }
+
+    .scroll-wrapper-bottom {
+        display: flex;
+        height: 100%;
+        margin: 20px;
+        
+        a {
+            display: grid;
+            text-decoration: none;
+            margin: auto auto 10px;
+            align-self: flex-end;
+
+            .fa-arrow-up {
+                margin: auto;
+                color: black;
+                font-size: 3rem;
+            }
+
+            p {
+                margin: auto;
+                color: black;
+                font-size: 2rem;
+            }
+        }
+
+        
+
     }
 }
 
