--- a/scss/header/_header.scss
+++ b/scss/header/_header.scss
@@ -14,22 +14,25 @@
             display: grid;
             background-color: rgba(#fff, 0.8);
             margin: auto;
+            margin-top: 35vh;
+            padding: 10px 5px;
             width: 100%;
-            height: 200px;
+            height: 160px;
             justify-items: center;
+
 
             h1 {
                 text-align: center;
                 display: block;
-                font-size: 1.8rem;
-                margin: auto;
+                font-size: 1.4rem;
+                margin: 10px 0px;
                 color: black;
             }
 
             p {
                 display: block;
-                font-size: 1.5rem;
-                margin: auto;
+                font-size: 1.2rem;
+                margin: 10px;
                 color: black;
             }
         }
@@ -48,13 +51,13 @@
                 .fa-arrow-down {
                     margin: auto;
                     color: white;
-                    font-size: 3rem;
+                    font-size: 2.5rem;
                 }
     
                 p {
                     margin: auto;
                     color: white;
-                    font-size: 2rem;
+                    font-size: 1.5rem;
                 }
             }
 
@@ -98,6 +101,7 @@
         .header-wrapper {
             .header-text {
                 width: 450px;
+                padding: 10px;
             }
         }
     }    
@@ -107,6 +111,7 @@
     .wrapper {
         .header-wrapper {
             .header-text {
+                padding: 20px;
                 width: 600px;
             }
         }
