--- a/scss/side_nav/_side_nav.scss
+++ b/scss/side_nav/_side_nav.scss
@@ -72,7 +72,7 @@
                 color: black;
 
                 li {
-                    margin: 20px 0px;
+                    margin: 0px;
                     padding: 20px 0px;
                     font-size: 1.1rem;
                     font-weight: 600;  
@@ -130,7 +130,7 @@
 
     .nav-wrapper { 
         display: block;
-        width: 150px;
+        //width: 150px;
         .initial-wrapper {
             .closebtn {
                 display: block;
